Centered lyric format, cleaned unused VLC binaries, bump version to 1.5.2